--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,8 @@
 {
     "context": "..",
     "dockerFile": "./Dockerfile",
-    "appPort": 3000
+    "appPort": 3000,
+    "extensions": [
+        "ms-vscode.vscode-typescript-tslint-plugin"
+    ]
 }
