--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,23 @@
     "dockerFile": "./Dockerfile",
     "appPort": 3000,
     "extensions": [
-        "ms-vscode.vscode-typescript-tslint-plugin"
-    ]
+        "dbaeumer.vscode-eslint",
+        "esbenp.prettier-vscode"
+    ],
+    "settings": {
+        "editor.tabSize": 4,
+        "editor.detectIndentation": false,
+        "eslint.validate": [
+            "javascript",
+            "javascriptreact",
+            {
+              "language": "typescript",
+              "autoFix": true
+            },
+            {
+              "language": "typescriptreact",
+              "autoFix": true
+            }
+          ]
+    }
 }
